dropwizard-example-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dropwizard-example-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dropwizard-example
spec:
  host: dropwizard-example
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dropwizard-example
spec:
  hosts:
    - "*"
  gateways:
    - dropwizard-example-gateway
  http:
  - match:
    - uri:
        prefix: /hello-world
    route:
    - destination:
        host: dropwizard-example
        port:
          number: 8080
        subset: v1
      weight: 50
    - destination:
        host: dropwizard-example
        port:
          number: 8080
        subset: v2
      weight: 50
  - route:
    - destination:
        host: dropwizard-example
        port:
          number: 8080
        subset: v1
